A few little fixes to make this page accessible too.

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
   <title>Hazard Ready</title>
   <meta charset="utf-8" />
@@ -19,20 +19,20 @@
       Hazard Ready websites help you find out about your natural hazard risks and steps you can take to prepare.
     </div>
   </div>
-  <div class="locations row">
+  <div class="locations row" role="main">
     <h2 class="caps">Current Locations</h2>
     <div class="small-12 medium-6 columns">
       <h3><a href="https://hazardready.org/missoula" target="_blank">Missoula County, MT</a></h3>
-      <div class="site-thumb"><a href="https://hazardready.org/seattle" target="_blank"><img src="missoula-ready.png"></a></div>
+      <div class="site-thumb"><a href="https://hazardready.org/missoula" target="_blank"><img alt="screenshot of this site" src="missoula-ready.png"></a></div>
       <p>Explore the potential for wildfire, flooding, winter and summer storms, earthquakes and landslides in Missoula County.</p>
     </div>
     <div class="small-12 medium-6 columns">
       <h3><a href="https://hazardready.org/seattle" target="_blank">King County, WA</a></h3>
-      <div class="site-thumb"><a href="https://hazardready.org/seattle" target="_blank"><img src="seattle-ready.png"></a></div>
+      <div class="site-thumb"><a href="https://hazardready.org/seattle" target="_blank"><img alt="screenshot of this site" src="seattle-ready.png"></a></div>
       <p>Find out about earthquakes, floods, landslides, volcano eruptions, dam bursts and sea level rise in King County.</p>
     </div>
   </div>
-  <div class="geek-box row vert-pad-medium">
+  <div class="geek-box row vert-pad-medium" role="complementary">
       <div class="small-12 medium-6 columns">
         <h3 class="caps">How do these sites work?</h3>
         <p>Hazard Ready sites are designed to help educate and prepare people for disasters that occur in their area. Disasters don't strike locations equally so we found it important to give location
