Move role up an element so that everything is in a landmark

--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
   <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
 </head>
 <body>
-  <div class="row">
-    <div class="title-header" role="banner">
+  <div class="row" role="banner">
+    <div class="title-header">
       <h1 class="caps">Hazard Ready</h1>
       <h2>Disaster preparedness websites</h2>
     </div>
