Change subtitle, update Seattle text

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <div class="row" role="banner">
     <div class="title-header">
       <h1 class="caps">Hazard Ready</h1>
-      <h2>Disaster preparedness websites</h2>
+      <h2>Disaster preparedness tools</h2>
     </div>
     <div class="information">
       Hazard Ready websites help you find out about your natural hazard risks and steps you can take to prepare.
@@ -29,7 +29,7 @@
     <div class="small-12 medium-6 columns">
       <h3><a href="https://hazardready.org/seattle" target="_blank">King County, WA</a></h3>
       <div class="site-thumb"><a href="https://hazardready.org/seattle" target="_blank"><img alt="screenshot of this site" src="seattle-ready.png"></a></div>
-      <p>Find out about earthquakes, floods, landslides, volcano eruptions, dam bursts and sea level rise in King County.</p>
+      <p>Find out about earthquakes, floods, landslides, volcano eruptions, summer and winter storms, and wildfires in King County. This site is available in English, Spanish, Simplified Chinese, Somali, Vietnamese, and Russian.</p>
     </div>
   </div>
   <div class="geek-box row vert-pad-medium" role="complementary">
