Make layout match other sites better

--- a/index.html
+++ b/index.html
@@ -10,13 +10,15 @@
   <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
 </head>
 <body>
-  <div class="row" role="banner">
+  <div class="row top-header" role="banner">
     <div class="title-header">
       <h1 class="caps">Hazard Ready</h1>
       <h2>Disaster preparedness tools</h2>
     </div>
     <div class="information">
-      Hazard Ready websites help you find out about your natural hazard risks and steps you can take to prepare.
+      <div class="tagline">
+        Hazard Ready websites help you find out about your natural hazard risks and steps you can take to prepare.
+      </div>
     </div>
   </div>
   <div class="locations row" role="main">
@@ -32,17 +34,19 @@
       <p>Find out about earthquakes, floods, landslides, volcano eruptions, summer and winter storms, and wildfires in King County. This site is available in English, Spanish, Simplified Chinese, Somali, Vietnamese, and Russian.</p>
     </div>
   </div>
-  <div class="geek-box row vert-pad-medium" role="complementary">
+  <div class="geek-box vert-pad-medium" role="complementary">
+    <div class="row">
       <div class="small-12 medium-6 columns">
         <h3 class="caps">How do these sites work?</h3>
         <p>Hazard Ready sites are designed to help educate and prepare people for disasters that occur in their area. Disasters don't strike locations equally so we found it important to give location
         specific information in order to properly prepare. Each site organizes current information and packages it in a way that makes it accessible for any area resident.</p>
         <p>Hazard Ready sites use the most up-to-date hazard risk data available for their locale. The user of this site is responsible for verifying any particular information with the original data sources. Although these data represent the best current assessment of hazards, they are not predictive of future events. The descriptions of risk and how to prepare for those risks are based on best information from the American Red Cross and the Federal Emergency Management Agency.
         <p>Have questions? <a href="mailto:info@hazardready.org">Email the creators</a> for more information.</p>
-    </div>
-    <div class="small-12 medium-6 columns">
+      </div>
+      <div class="small-12 medium-6 columns">
         <h3 class="caps">Who made them?</h3>
         <p>Hazard Ready sites are based on <a href="http://www.opb.org/news/widget/aftershock-find-your-cascadia-earthquake-story/" target="_blank">Aftershock</a>, an earthquake preparedness application for Oregon residents. Carson MacPherson-Krutsky and <a href="https://hs.umt.edu/geosciences/faculty/bendick/" target="_blank">Dr. Rebecca Bendick</a>, a graduate student and her advisor at the Unversity of Montana, had the idea to expand it for other locales and types of disasters. <a href="https://github.com/nein09" target="_blank">Melinda Minch</a> and <a href="https://github.com/eldang" target="_blank">Eldan Goldenberg</a> adapted it for that purpose. Source for a general-purpose version of these sites is available on <a href="https://github.com/missoula-ready/disaster-preparedness" target="_blank">Github</a>.</p>
+      </div>
     </div>
   </div>
 </body>
