Add in logo and tweak design accordingly

--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
 <head>
   <title>Hazard Ready</title>
   <meta charset="utf-8" />
+  <meta http-equiv="X-UA-Compatible" content="IE=Edge" />
+  <link rel="shortcut icon" href="favicon.ico"/>
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link type="text/css" rel="stylesheet" href="normalize.css">
   <link type="text/css" rel="stylesheet" href="foundation.min.css">
@@ -12,8 +14,8 @@
 <body>
   <div class="row top-header" role="banner">
     <div class="title-header">
-      <h1 class="caps">Hazard Ready</h1>
-      <h2>Disaster preparedness tools</h2>
+      <img class="title-image" src="logo.png" alt="Hazard Ready">
+      <h2 class="caps">Disaster preparedness tools</h2>
     </div>
     <div class="information">
       <div class="tagline">
