Make the red text not red

--- a/login.html
+++ b/login.html
@@ -70,7 +70,7 @@
         can track responses (no personal information will be collected).
       </p>
       <p class="content__text fine-print">
-        *We will also use the code to enter you in the gift card drawing <span class="alert">after you have completed the short feedback survey</span>!
+        *We will also use the code to enter you in the gift card drawing after you have completed the short feedback survey!
       </p>
     </div>
     <script type="text/javascript" src="login.js"></script>
