--- a/index.html
+++ b/index.html
@@ -27,18 +27,18 @@
     <p>Hazard Ready currently has websites that cover the following areas in the United States. If you'd like to have a Hazard Ready site for your part of the world, please <a href="mailto:info@hazardready.org">contact us</a>. We'd love to work with you!</p>
     <div class="locations">
       <div class="location">
-        <h3><a href="https://hazardready.org/missoula" target="_blank">Missoula County, MT</a></h3>
-        <div class="site-thumb"><a href="https://hazardready.org/missoula" target="_blank"><img alt="screenshot of this site" src="missoula-ready.png"></a></div>
+        <h3><a href="/missoula" target="_blank">Missoula County, MT</a></h3>
+        <div class="site-thumb"><a href="/missoula" target="_blank"><img alt="screenshot of this site" src="missoula-ready.png"></a></div>
         <p>Explore the potential for wildfire, flooding, winter and summer storms, earthquakes and landslides in Missoula County.</p>
       </div>
       <div class="location">
-        <h3><a href="https://hazardready.org/seattle" target="_blank">King County, WA</a></h3>
-        <div class="site-thumb"><a href="https://hazardready.org/seattle" target="_blank"><img alt="screenshot of this site" src="seattle-ready.png"></a></div>
+        <h3><a href="/seattle" target="_blank">King County, WA</a></h3>
+        <div class="site-thumb"><a href="/seattle" target="_blank"><img alt="screenshot of this site" src="seattle-ready.png"></a></div>
         <p>Find out about earthquakes, floods, landslides, volcano eruptions, summer and winter storms, and wildfires in King County. This site is available in English, Spanish, Simplified Chinese, Somali, Vietnamese, and Russian.</p>
       </div>
       <div class="location">
-        <h3><a href="https://hazardready.org/pdx" target="_blank">Portland, OR Metro Area</a></h3>
-        <div class="site-thumb"><a href="https://hazardready.org/pdx" target="_blank"><img alt="screenshot of this site" src="pdx-ready.jpg"></a></div>
+        <h3><a href="/pdx" target="_blank">Portland, OR Metro Area</a></h3>
+        <div class="site-thumb"><a href="/pdx" target="_blank"><img alt="screenshot of this site" src="pdx-ready.jpg"></a></div>
         <p>Get information about earthquakes, floods, landslides, volcano eruptions, summer and winter storms, and wildfires in the Portland Metro Region, including Clackamas, Clark, Columbia, Multnomah, and Washington Counties. This site is available in English and Spanish, and features a new preparedness checklist as well as an updated design.</p>
       </div>
     </div>
