Update Seattle information and screenshot

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
       <div class="location">
         <h3><a href="/seattle" target="_blank">King County, WA</a></h3>
         <div class="site-thumb"><a href="/seattle" target="_blank"><img alt="screenshot of this site" src="seattle-ready.png"></a></div>
-        <p>Find out about earthquakes, floods, landslides, volcano eruptions, summer and winter storms, and wildfires in King County. This site is available in English, Spanish, Simplified Chinese, Somali, Vietnamese, and Russian.</p>
+        <p>Find out about earthquakes, floods, landslides, volcano eruptions, summer and winter storms, and wildfires in King County. Use a personalized checklist to help you prepare for natural hazards. This site is available in English, Spanish, Traditional Chinese, Somali, Vietnamese, Korean, Arabic, and Russian.</p>
       </div>
       <div class="location">
         <h3><a href="/pdx" target="_blank">Portland, OR Metro Area</a></h3>
